<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#A6E4EC"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="54dp">

        <TextView
            android:id="@+id/welcomeMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="serif"
            android:padding="16dp"
            android:text="@string/dashboard"
            android:textColor="#000000"
            android:textSize="48sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_user"
            android:textAlignment="center" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="176dp"
            android:layout_margin="3px"
            android:alignmentMode="alignMargins"
            android:columnCount="2"
            android:columnOrderPreserved="false"
            android:padding="16dp"
            android:rowCount="2">

            <Button
                android:id="@+id/breakfastButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                android:background="@drawable/rounded_button"
                android:elevation="8dp"
                android:fontFamily="serif"
                android:text="@string/plan_breakfast"
                android:textColor="#006064"
                tools:backgroundTint="#FFC107"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/lunchButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                android:background="@drawable/rounded_button"
                android:elevation="8dp"
                android:fontFamily="serif"
                android:text="@string/plan_lunch"
                android:textColor="#006064"
                tools:backgroundTint="#FFC107"

                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/dinnerButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                android:background="@drawable/rounded_button"
                android:elevation="8dp"
                android:fontFamily="serif"
                android:text="@string/plan_dinner"
                android:textColor="#006064"
                tools:backgroundTint="#FFC107"

                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/snackButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                android:background="@drawable/rounded_button"
                android:elevation="8dp"
                android:fontFamily="serif"
                android:text="@string/plan_snack"
                android:textColor="#006064"
                tools:backgroundTint="#FFC107"

                tools:ignore="VisualLintButtonSize" />
        </GridLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="259dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:fontFamily="serif"
            android:text="@string/recipes_this_week"

            android:textColor="#424242"
            tools:backgroundTint="#FF9800" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
